--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -62,4 +62,12 @@
 	<string name="tmc_on_personal">TMC</string>
 	<string name="five_achievements_on_soul">成功的五件事</string>
 	<string name="thoughts_on_achievements_on_soul">成功感言</string>
+	
+	<string name="week_1">星期日</string>
+	<string name="week_2">星期一</string>
+	<string name="week_3">星期二</string>
+	<string name="week_4">星期三</string>
+	<string name="week_5">星期四</string>
+	<string name="week_6">星期五</string>
+	<string name="week_7">星期六</string>
 </resources>
