--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -25,6 +25,9 @@
 	<string name="edit_save">保存</string>
 	<string name="edit_back">返回</string>
 	<string name="start_jounery">点击进入</string>
+	<string name="journery_description">记录,回顾,自省\t\n每天五分钟,平衡人生\t\n一步步实现梦想\t\n
+	    \u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020
+	    \u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020-晨间日记圆梦</string>
 	
 	<!-- config string -->
 	<string name="work">工作</string>
