--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -34,7 +34,7 @@
 	<!-- config string -->
 	<string name="work">工作</string>
 	<string name="finance">财富</string>
-	<string name="family">家人朋友</string>
+	<string name="family">人脉</string>
 	<string name="innovation">创意</string>
 	<string name="date">日期</string>
 	<string name="mit">MIT</string>
