--- a/Diary/res/values-zh-rCN/strings.xml
+++ b/Diary/res/values-zh-rCN/strings.xml
@@ -37,6 +37,11 @@
 	<string name="edit_dismiss">舍弃</string>
 	<string name="sub_category_operation">操作</string>
 	
+	<string name="richtext_select_all">全选</string>
+	<string name="richtext_cut">剪切</string>
+	<string name="richtext_copy">复制</string>
+	<string name="richtext_paste">粘贴</string>
+	
 	<!-- config string -->
 	<string name="work">工作</string>
 	<string name="finance">财富</string>
