--- a/Diary/res/values-zh-rCN/strings.xml
+++ b/Diary/res/values-zh-rCN/strings.xml
@@ -29,6 +29,8 @@
     <!-- ********************************************************************************* -->
     <string name="login_hint">账号/邮箱</string>
     <string name="password_hint">密码</string>
+    <string name="confirm_password_hint">确认密码</string>
+    <string name="email_hint">邮箱地址</string>
     <string name="sign_in">登陆</string>
     <string name="sign_up">注册</string>
     <string name="find_passwd">忘记密码 ?</string>
