--- a/Diary/res/values/strings.xml
+++ b/Diary/res/values/strings.xml
@@ -35,6 +35,8 @@
     <string name="sign_up">Sign Up</string>
     <string name="find_passwd">Forget your password?</string>
     <string name="register_success">Account has been registered</string>
+    <string name="register_error_unidentical_passwd">please reconfirm the password</string>
+    <string name="register_error_void_item">please fill up the content</string>
     
 	<string name="edit_save">SAVE</string>
 	<string name="edit_back">BACK</string>
