--- a/Diary/res/values/strings.xml
+++ b/Diary/res/values/strings.xml
@@ -37,6 +37,7 @@
     <string name="register_success">Account has been registered</string>
     <string name="register_error_unidentical_passwd">please reconfirm the password</string>
     <string name="register_error_void_item">please fill up the content</string>
+    <string name="server_error">server error</string>
     
 	<string name="edit_save">SAVE</string>
 	<string name="edit_back">BACK</string>
