--- a/Diary/res/values/strings.xml
+++ b/Diary/res/values/strings.xml
@@ -74,6 +74,7 @@
     <string name="template_rename_title">Rename Title</string>
     <string name="template_saved">Save successfully</string>
     <string name="template_rename_hint">Name of template has not been set?</string>
+    <string name="template_sub">Works on today?Content been set will be erased</string>
     <!-- ********************************************************************************** -->
     <string name="diary_lost_warning">Save the changes before discarded?</string>
     
