--- a/Diary/res/values-zh-rCN/strings.xml
+++ b/Diary/res/values-zh-rCN/strings.xml
@@ -42,6 +42,8 @@
     <string name ="function_limitation">该功能即将推出，敬请期待！</string>
     <string name ="me_software_instruction">晨间日记圆梦说明</string>
     <string name ="me_setting">设置</string>
+    <string name="me_sync">数据同步</string>
+    <string name="me_version_check">检查版本更新</string>
     <string name ="me_logout">退出</string>
     <!-- ********************************************************************************* -->
     <string name="login_hint">账号/邮箱</string>
