--- a/Diary/res/values/strings.xml
+++ b/Diary/res/values/strings.xml
@@ -59,6 +59,8 @@
     <string name ="long_term_vision">My Long Term Vision</string>
     <string name ="me_software_instruction">Instruction</string>
     <string name ="me_setting">Setting</string>
+    <string name="me_sync">Synchronization</string>
+    <string name="me_version_check">Check for Updates</string>
     <string name ="me_logout">Logout</string>
     <!-- ********************************************************************************** -->
     <string name="add_template">Add Template</string>
