--- a/Diary/res/values-zh-rCN/strings.xml
+++ b/Diary/res/values-zh-rCN/strings.xml
@@ -82,6 +82,9 @@
     <string name="template_sub">模板立刻生效？今日的内容会被删除</string>
     <string name="template_none_title">无</string>
     <string name="template_delete_none">必须要有一条记录点</string>
+    <!-- ********************************************************************************** -->
+    <string name="setting_title">设置</string>
+    <string name="passwd_protection">密\u0020码\u0020保\u0020护</string>
     <!-- *********************************************************************************** -->
 	<string name="edit_save">保存</string>
 	<string name="edit_back">返回</string>
