--- a/NumberLock/res/values-zh-rCN/strings.xml
+++ b/NumberLock/res/values-zh-rCN/strings.xml
@@ -14,7 +14,8 @@
 	<string name="setting_pwd_success">密码设置成功！</string>
 	<string name="login_success">登录成功！</string>
 	<string name="input_again">重输</string>
-	<string name="delete">删除</string>
+	<string name="passwd_backwards">删除</string>
+	<string name="number_forget">忘记密码?</string>
 	<string name="dialog_title">提示</string>
 	<string name="dialog_msg">请选择类型：</string>
 	<string name="dialog_ok">设置密码</string>
