--- a/Diary/res/values/strings.xml
+++ b/Diary/res/values/strings.xml
@@ -85,6 +85,8 @@
     <!-- ********************************************************************************** -->
     <string name="setting_title">Setting</string>
     <string name="passwd_protection">Password Protection</string>
+    <string name="passwd_protection_open">Open</string>
+    <string name="passwd_protection_close">Close</string>
     <!-- ********************************************************************************** -->
     <string name="diary_lost_warning">Save the changes before discarded?</string>
     
