--- a/NumberLock/res/values-zh-rCN/strings.xml
+++ b/NumberLock/res/values-zh-rCN/strings.xml
@@ -13,6 +13,7 @@
 	<string name="not_equals">两次输入的密码不同</string>
 	<string name="setting_pwd_success">密码设置成功！</string>
 	<string name="login_success">登录成功！</string>
+	<string name="login_fail">密码错误!</string>
 	<string name="input_again">重输</string>
 	<string name="passwd_backwards">删除</string>
 	<string name="number_forget">忘记密码?</string>
