--- a/NumberLock/res/values/strings.xml
+++ b/NumberLock/res/values/strings.xml
@@ -17,6 +17,7 @@
 	<string name="input_again">重输</string>
 	<string name="passwd_backwards">delete</string>
 	<string name="number_forget">Forget Password?</string>
+	<string name="clear_by_login_passwd">Reactive by login password?</string>
 	<string name="dialog_title">提示</string>
 	<string name="dialog_msg">请选择类型：</string>
 	<string name="dialog_ok">设置密码</string>
