--- a/Diary/res/values/strings.xml
+++ b/Diary/res/values/strings.xml
@@ -59,6 +59,7 @@
     <string name ="long_term_vision">My Long Term Vision</string>
     <string name ="me_software_instruction">Instruction</string>
     <string name ="me_setting">Setting</string>
+    <string name ="me_export">Export Diary</string>
     <string name="me_sync">Synchronization</string>
     <string name="me_version_check">Check for Updates</string>
     <string name ="me_logout">Logout</string>
@@ -85,6 +86,8 @@
     <!-- ********************************************************************************** -->
     <string name="setting_title">Setting</string>
     <string name="passwd_protection">Password Protection</string>
+    <!-- ********************************************************************************** -->
+    <string name="export_title">Export</string>
     <!-- ********************************************************************************** -->
     <string name="diary_lost_warning">Save the changes before discarded?</string>
     
